--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,14 @@ click==8.3.1
 cryptography==46.0.3
 joblib==1.5.3
 nltk==3.9.2
+numpy==2.3.5
 pdfminer.six==20251107
 pdfplumber==0.11.8
 pillow==12.0.0
 pycparser==2.23
 pypdfium2==5.2.0
 regex==2025.11.3
+scikit-learn==1.8.0
+scipy==1.16.3
+threadpoolctl==3.6.0
 tqdm==4.67.1
