--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+blinker==1.9.0
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 cryptography==46.0.3
+Flask==3.1.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
 joblib==1.5.3
+MarkupSafe==3.0.3
 nltk==3.9.2
 numpy==2.3.5
 pdfminer.six==20251107
@@ -15,3 +20,4 @@ scikit-learn==1.8.0
 scipy==1.16.3
 threadpoolctl==3.6.0
 tqdm==4.67.1
+Werkzeug==3.1.4
